--- a/r4ds_wrangle_exercises_12-13.rmd
+++ b/r4ds_wrangle_exercises_12-13.rmd
@@ -311,11 +311,163 @@ They all store different parts of a player's game and can be joined together on 
 ### 1. Compute the average delay by destination, then join on the `airports` data frame so you can show the spatial distribution of delays. Here's an easy way to draw a map of the United States:
 
 ```{r}
-airports %>%
-  semi_join(flights, c("faa" = "dest")) %>%
-  ggplot(aes(lon, lat)) +
+flightdelays <- 
+  flights %>%
+  group_by(dest) %>% 
+  summarize(avg_delay = mean(arr_delay, na.rm = TRUE)) 
+
+flightdelays %>% 
+  inner_join(airports, by = c("dest" = "faa")) %>% 
+  ggplot(aes(lon, lat, color = avg_delay)) +
+    borders("state") +
+    geom_point() +
+    coord_quickmap()
+
+```
+
+### 2. Add the location of the origin and destination (i.e. the `lat` and `lon`) to `flights`.
+
+```{r}
+flights %>% 
+  left_join(airports, by = c("origin" = "faa")) %>% 
+  left_join(airports, by = c("dest" = "faa"))
+```
+
+### 3. Is there a relationship between the age of a plane and its delays?
+
+```{r}
+flights %>% 
+  group_by(tailnum) %>% 
+  summarize(avg_delay = mean(arr_delay, na.rm = TRUE)) %>% 
+  left_join(planes, by = c("tailnum" = "tailnum")) %>% 
+  ggplot(aes(year, avg_delay)) +
+  geom_point()
+```
+
+I mean... not really...
+
+### 4. What weather conditions make it more likely to see a delay?
+
+```{r}
+flights %>% 
+  left_join(weather) %>% 
+  ggplot(aes(precip, dep_delay)) +
+  geom_jitter() +
+  geom_smooth()
+```
+
+Would have thought precipitation, but honestly not sure now. Maybe low temperature? Visibility? Hell, I have 0 idea.
+
+```{r}
+flights %>% 
+  left_join(weather) %>% 
+  ggplot(aes(temp, dep_delay)) +
+  geom_jitter() +
+  geom_smooth()
+```
+
+```{r}
+flights %>% 
+  left_join(weather) %>% 
+  ggplot(aes(visib, dep_delay)) +
+  geom_jitter() +
+  geom_smooth()
+```
+
+### 5. What happened on June 13 2013? Display the spatial pattern of delays, and then use Google to cross-reference with the weather.
+
+```{r}
+flightdelays <- 
+  flights %>%
+  filter(year == 2013, month == 6, day == 13) %>% 
+  group_by(dest) %>% 
+  summarize(avg_delay = mean(arr_delay, na.rm = TRUE)) 
+
+flightdelays %>% 
+  inner_join(airports, by = c("dest" = "faa")) %>% 
+  ggplot(aes(lon, lat, color = avg_delay)) +
     borders("state") +
     geom_point() +
     coord_quickmap()
 ```
+
+Apparently there was a storm system blowing across from the Plains to the Mid-Atlantic. I dunno, I guess it kind of lines up?
+
+## 13.5.1 Exercises
+
+### 1. What does it mean for a flight to have a missing `tailnum`? What do the tail numbers that don't have a matching record in `planes` have in common? (Hint: one variable explains ~90% of the problems.)
+
+```{r}
+flights %>%
+  anti_join(planes, by = "tailnum") %>%
+  count(carrier, sort = TRUE)
+```
+
+Most of the missing tailnums are from the carriers MQ and AA. Who knows what happened with their tailnum data.
+
+
+### 2. Filter flights to only show flights with planes that have flown at least 100 flights.
+
+```{r}
+planes100 <- flights %>% 
+  group_by(tailnum) %>% 
+  count() %>% 
+  filter (n >= 100)
+
+flights %>% 
+  semi_join(planes100)
+```
+
+### 3. Combine `fueleconomy::vehicles` and `fueleconomy::common` to find only the records for the most common models.
+
+```{r}
+commonvehicles <- fueleconomy::common %>% 
+  arrange(desc(n)) %>% 
+  head()
+
+fueleconomy::vehicles %>% 
+  semi_join(commonvehicles, by = "model")
+```
+
+### 4. Find the 48 hours (over the course of the whole year) that have the worst delays. Cross-reference it with the `weather` data. Can you see any patterns?
+
+```{r}
+delays48 <- flights %>% 
+  select(year:day, hour, arr_delay) %>% 
+  group_by(year, month, day, hour) %>% 
+  summarize(avg_delay = mean(arr_delay, na.rm = TRUE)) %>% 
+  arrange(desc(avg_delay)) %>% 
+  head(48)
+
+weather48 <- weather %>% 
+  semi_join(delays48) %>% 
+  group_by(year, month, day, hour) %>% 
+  summarize(avg_precip = mean(precip, na.rm = TRUE), avg_temp = mean(temp, na.rm = TRUE), avg_vis = mean(visib, na.rm = TRUE))
+
+View(weather48)
+```
+
+Doesn't look like anything to me.
+
+### 5. What does `anti_join(flights, airports, by = c("dest" = "faa"))` tell you? What does `anti_join(airports, flights, by = c("faa" = "dest"))` tell you?
+
+First one limits `flights` to records where the destination has no matching information in the `airports` table, i.e. removes records of flights with no airport info. 
+
+Second one limits `airports` to just those airports that never showed up as a destination in the `flights` table, i.e. lists the airports that did not receive any flights from NYC in 2013.
+
+### 6. You might expect that there's an implicit relationship between plane and airline, because each plane is flown by a single airline. Confirm or reject this hypothesis using the tools you've learned above.
+
+```{r}
+flights %>%
+  select(tailnum, carrier) %>% 
+  distinct %>% 
+  group_by(tailnum) %>% 
+  count() %>% 
+  filter(n > 1) %>% 
+  arrange(desc(n))
+```
+
+There are 18 tailnums that have been associated with two carriers. Either different carriers are using the same tailnum (which I doubt), or two carriers merged and did not change the tailnums on those 18 planes post-merger.
+
+
 
